--- a/assets/css/spinners.css
+++ b/assets/css/spinners.css
@@ -28,6 +28,64 @@
   animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
   stroke-linecap: round;
 }
+.btn-active{
+  position: relative;
+  width: 80px;
+  height: 40px;
+  -webkit-appearance: none;
+  background: #03a9f4;
+  outline: none;
+  border-radius: 20px;
+  border-color: transparent;
+  box-shadow: 0 2px 5px rgba(0,0,0,.2);
+  transition: .5s;
+}
+.btn-active:before {
+  content: '';
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  top: -1px;
+  left: 0;
+  background: #fff;
+  transform: scale(1.1);
+  box-shadow: 0 2px 5px rgba(0,0,0,.2);
+  transition: .5s;
+}
+.btn-active:before {
+  left: 37px;
+}
+
+.btn-inactive{
+  position: relative;
+  width: 80px;
+  height: 40px;
+  -webkit-appearance: none;
+  background: #c6c6c6;
+  border-color: transparent;
+  outline: none;
+  border-radius: 20px;
+  box-shadow: 0 2px 5px rgba(0,0,0,.2);
+  transition: .5s;
+}
+.btn-inactive:before {
+  content: '';
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  top: -1px;
+  left: 0;
+  background: #fff;
+  transform: scale(1.1);
+  box-shadow: 0 2px 5px rgba(0,0,0,.2);
+  transition: .5s;
+}
+.btn-inactive:before {
+  left: -1px;
+}
+
 @keyframes rotate {
   100% {
     transform: rotate(360deg);
