--- a/assets/css/spinners.css
+++ b/assets/css/spinners.css
@@ -30,8 +30,10 @@
 }
 .btn-active{
   position: relative;
-  width: 80px;
-  height: 40px;
+  /*width: 80px;
+  height: 40px;*/
+  width: 70px;
+  height: 35px;
   -webkit-appearance: none;
   background: #03a9f4;
   outline: none;
@@ -43,10 +45,12 @@
 .btn-active:before {
   content: '';
   position: absolute;
-  width: 40px;
-  height: 40px;
+  /*width: 40px;
+  height: 40px;*/
+  width: 35px;
+  height: 35px;
   border-radius: 20px;
-  top: -1px;
+  top: -2px;
   left: 0;
   background: #fff;
   transform: scale(1.1);
@@ -54,13 +58,16 @@
   transition: .5s;
 }
 .btn-active:before {
-  left: 37px;
+  /*left: 37px;*/
+  left: 32px;
 }
 
 .btn-inactive{
   position: relative;
-  width: 80px;
-  height: 40px;
+  /*width: 80px;*/
+  /*height: 40px;*/
+  width: 70px;
+  height: 35px;
   -webkit-appearance: none;
   background: #c6c6c6;
   border-color: transparent;
@@ -72,8 +79,10 @@
 .btn-inactive:before {
   content: '';
   position: absolute;
-  width: 40px;
-  height: 40px;
+  /*width: 40px;*/
+  /*height: 40px;*/
+  width: 35px;
+  height: 35px;
   border-radius: 20px;
   top: -1px;
   left: 0;
@@ -83,7 +92,7 @@
   transition: .5s;
 }
 .btn-inactive:before {
-  left: -1px;
+  left: 0px;
 }
 
 @keyframes rotate {
